--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,10 +18,6 @@ body {
   padding: 0 10% 5% 165px;
 }
 
-.padding div {
-  font-size: 3vw;
-}
-
 .padding p {
   font-size: 5vw;
   background: url("https://images.unsplash.com/photo-1550684656-96eda9e5c632?&w=1634")
@@ -268,7 +264,7 @@ body {
   margin: 0px;
 }
 
-@media (max-width: 980px) {
+@media (min-width: 980px) {
   body {
     background-size: cover !important;
     background-repeat: no-repeat;
@@ -283,9 +279,7 @@ body {
   #tagline {
     width: 98%;
     font-size: 29px;
-    /* text-align: center; */
   }
-
   #skill {
     text-align: left;
   }
@@ -345,12 +339,12 @@ body {
   #typePlace {
     font-size: 50%;
   }
-  h1 {
+  /* h1 {
     font-size: 150%;
   }
   h2 {
     font-size: 100%;
-  }
+  } */
   .col {
     display: flex;
     flex-direction: column;
@@ -358,6 +352,12 @@ body {
     height: 60%;
     width: 85%;
     padding: 0 0 0 5%;
+  }
+  .row a {
+    font-size: 2vw;
+  }
+  .card {
+    width: 30%;
   }
 }
 
@@ -425,19 +425,40 @@ button:focus {
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
   font-size: 25px;
   color: white;
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
   display: block;
+  -webkit-transition: color 1.2s ease-in-out;
+  -moz-transition: color 1.2s ease-in-out;
+  -o-transition: color 1.2s ease-in-out;
+  -ms-transition: color 1.2s ease-in-out;
+  transition: color 1.2s ease-in-out;
 }
 
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
+.navTabActive {
+  font-size: 30px !important;
+  color: pink !important;
 }
 
 @media only screen and (max-width: 426px) {
+  #typePlace {
+    font-size: 50%;
+  }
+  #tagline h1 {
+    font-size: 40px;
+  }
+  #tagline {
+    width: 98%;
+    font-size: 29px;
+  }
+  .details a {
+    font-size: 20px;
+    margin: 0px 3vw;
+    padding: 14px;
+    text-align: center;
+  }
   .sidenav {
     display: none;
   }
@@ -448,6 +469,21 @@ button:focus {
   .padding p {
     font-size: 7vw;
   }
+  .row a {
+    font-size: 3vw;
+  }
+  .secTab {
+    font-size: 3vw !important;
+  }
+  .card {
+    width: 100%;
+    flex: 0 0 auto;
+  }
+}
+@media only screen and (min-width: 426px) {
+  .card {
+    width: 30%;
+  }
 }
 
 .col {
@@ -456,7 +492,7 @@ button:focus {
   justify-content: space-around;
   height: 60%;
   width: 90%;
-  padding: 0 0 0 5%;
+  /* padding: 0 0 0 5%; */
 }
 
 .icon {
@@ -471,7 +507,6 @@ button:focus {
 }
 .row a {
   display: block;
-  font-size: 3vw;
   text-decoration: none;
   background: url("https://images.unsplash.com/photo-1550684656-96eda9e5c632?&w=1634")
     center center;
@@ -489,17 +524,37 @@ button:focus {
   font-size: 1.5vw;
 }
 
+.secTabActive{
+  border-bottom: 3px solid #000;
+  -webkit-animation: pulse 0.5s;
+  -moz-animation: pulse 0.5s;
+  animation: pulse 0.5s;
+}
 
-.animate_when_almost_visible {
-  -webkit-animation-duration: 0.6s;
-  -moz-animation-duration: 0.6s;
-  -o-animation-duration: 0.6s;
-  animation-duration: 0.6s;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  transform: scale(1);
-  opacity: 1;
+.secTab {
+  margin-right: 15px;
+  font-size: 2vw;
+}
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  margin: 2px 10px;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+.scrolling-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
